--- a/_config.yml
+++ b/_config.yml
@@ -178,7 +178,7 @@ site_state: true
 # Value before `||` delimiter is the target permalink, value after `||` delimiter is the name of Font Awesome icon.
 social:
   GitHub: https://github.com/fgu30 || fab fa-github
-  Linkedin: www.linkedin.com/in/fengtech || fa fa-linkedin
+  Linkedin: www.linkedin.com/in/fengtech || fab fa-linkedin
 
   #E-Mail: mailto:yourname@gmail.com || fa fa-envelope
   #Weibo: https://weibo.com/yourname || fab fa-weibo
