--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "node": ">=10.9.0"
   },
   "dependencies": {
+    "hexo-filter-emoji": "^2.2.1",
     "hexo-generator-searchdb": "^1.3.3"
   }
 }
